# MyTube

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: ci.yml
app/: main.py
app/api/: root.py  routes.py
app/core/: config.py  logging.py
app/db/: models.py  repository.py
app/services/: binaries_service.py  ffmpeg_pipeline.py  ffmpeg_setup.py  musicatlas_catalog_jobs.py  musicatlas_client.py  musicatlas_playlist_service.py  playlist_service.py  sendspin_service.py  sonos_service.py  source_resolver.py  spotdl_client.py  spotdl_service.py  spotify_free_service.py  spotify_import_service.py  stream_engine.py  (+3 more)
frontend/: components.d.ts  index.html  tailwind.config.cjs
scripts/: migrate_add_playlist_pinned.sql  run_dev.sh  setup_deno.sh  setup_ffmpeg.sh  setup_yt_dlp.sh
tests/: test_api.py  test_api_extended.py  test_binaries_service.py  test_config.py  test_extractors.py  test_ffmpeg_pipeline_metadata.py  test_ffmpeg_probe_metadata.py  test_ffmpeg_resilience.py  test_ffmpeg_setup.py  test_local_folder.py  test_media_sources.py  test_musicatlas_client.py  test_musicatlas_daily_playlists.py  test_musicatlas_routes.py  test_playlist_service.py  test_repository.py  test_sendspin_routes.py  test_sendspin_service.py  test_sonos_service.py  test_source_resolver.py  test_spotify_free_service.py  test_spotify_import_service.py  test_stream_engine.py  test_sync_service.py  test_yt_dlp_client.py  test_yt_dlp_service.py
(+95 files in other folders)
